:feat; add count to duration in ms; fix connection to api:i needed use spotify sdk

--- a/spotify-widget.csproj
+++ b/spotify-widget.csproj
@@ -2,11 +2,19 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net9.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <RootNamespace>spotify_widget</RootNamespace>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="logo-icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="logo-icon.png" />
+  </ItemGroup>
 
 </Project>
